src/objects/auSurvey__c.object
<CustomObject>
    <fields>
        <fullName>AllBOMembers__c</fullName>
        <description>All Branch Office Members</description>
        <label>支社全メンバー</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AllMembers__c</fullName>
        <label>全メンバー</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BranchOfficeManager__c</fullName>
        <label>支社支店長GL</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BusinessLocationBranchGroup__c</fullName>
        <label>支店/グループ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisplayOrder__c</fullName>
        <label>表示順</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <label>年度</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsComment__c</fullName>
        <formula>ISBLANK(Personal__c)</formula>
        <label>IsComment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ItemNumber__c</fullName>
        <label>項番</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MainCategory__c</fullName>
        <label>大カテゴリ</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MembersReply__c</fullName>
        <label>テキスト質問 メンバ回答</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NationalBOManagers__c</fullName>
        <description>National Branch Office Managers</description>
        <label>全国支店長GL</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NationalMembers__c</fullName>
        <label>全国全メンバー</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>期</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PersonalReply__c</fullName>
        <label>テキスト質問 本人回答</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Personal__c</fullName>
        <label>本人</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PreviousAllBOMembersRatio__c</fullName>
        <description>Previous All Branch Office Members Ratio</description>
        <label>支社全メンバー前回比</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PreviousAllMembersRatio__c</fullName>
        <label>全メンバー前回比</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PreviousBOManagerRatio__c</fullName>
        <description>Previous Branch Office Manager Ratio</description>
        <label>支社支店長GL前回比</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PreviousNationalBOManagersRatio__c</fullName>
        <description>Previous National Branch Office Managers Ratio</description>
        <label>全国支店長GL前回比</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PreviousNationalMembersRatio__c</fullName>
        <label>全国全メンバー前回比</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PreviousPersonalRatio__c</fullName>
        <label>本人前回比</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>設問</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecalculateSharingVersion__c</fullName>
        <label>RecalculateSharingVersion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RegionalOfficeName__c</fullName>
        <label>支社</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubCategory__c</fullName>
        <label>中カテゴリ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurveyType__c</fullName>
        <label>サーベイ種別</label>
        <picklist>
            <picklistValues>
                <fullName>職場サーベイ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>営業担当アンケート</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSAアンケート</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>タイトル</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnifiedAgencyBranch__c</fullName>
        <label>統括支店/部</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>auSurvey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>surveyId__c</fullName>
        <formula>CASESAFEID( User__c ) + FiscalYear__c + TEXT(Period__c) + Title__c</formula>
        <label>surveyId</label>
        <type>Text</type>
    </fields>
    <label>auSurvey</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SurveyType__c</columns>
        <columns>Title__c</columns>
        <columns>ItemNumber__c</columns>
        <columns>Period__c</columns>
        <columns>MainCategory__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>MembersReply__c</columns>
        <columns>PersonalReply__c</columns>
        <columns>AllMembers__c</columns>
        <columns>PreviousAllMembersRatio__c</columns>
        <columns>NationalBOManagers__c</columns>
        <columns>PreviousNationalBOManagersRatio__c</columns>
        <columns>NationalMembers__c</columns>
        <columns>PreviousNationalMembersRatio__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AUS-{00000000}</displayFormat>
        <label>auSurvey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>